# lua_from_c

./: .gitignore  CMakeLists.txt  README  main.c  run.sh
lua/: eatguy0.lua  hello.lua  main.lua
